Fixed float panel alignment in table dialog, also floating toolbar heigh in RTL

--- a/js/tinymce/skins/lightgray/FloatPanel.less
+++ b/js/tinymce/skins/lightgray/FloatPanel.less
@@ -159,5 +159,10 @@
 // Make the floatpanel height auto so it can auto adjust height
 .@{prefix}-container.@{prefix}-panel.@{prefix}-floatpanel.@{prefix}-window.@{prefix}-in {
 	height: auto !important;
+}
+
+// Make the sub panel in the table dialog align
+.@{prefix}-container.@{prefix}-panel.@{prefix}-floatpanel.@{prefix}-menu.@{prefix}-menu-sub.@{prefix}-menu-align {
+	margin-top: -1px;
 } 
 // End of D2L
