--- a/js/tinymce/skins/lightgray/FlowLayout.less
+++ b/js/tinymce/skins/lightgray/FlowLayout.less
@@ -34,3 +34,10 @@
 .@{prefix}-rtl .@{prefix}-flow-layout-item.@{prefix}-last {
 	margin-left: @flow-layout-spacing;
 }
+
+// D2l
+// Fix floating toolbar height problem in RTL
+.@{prefix}-rtl .@{prefix}-flow-layout-item {
+	margin: 0 @flow-layout-spacing 0 0;
+}
+//
